--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref" : "/foo/",
+            "deployUrl": "/foo/",
             "outputPath": "dist/demodemo",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -119,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "demodemo"
+    }
+  },
+  "defaultProject": "demodemo",
+  "cli": {
+    "analytics": "a23c7201-8f8d-4565-86dc-381f4d606d92"
+  }
 }
