--- a/angular.json
+++ b/angular.json
@@ -13,8 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref" : "/foo/",
-            "deployUrl": "/foo/",
+            "baseHref" : "/",
+            "deployUrl": "/",
             "outputPath": "dist/demodemo",
             "index": "src/index.html",
             "main": "src/main.ts",
