--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "deployUrl": "https://createrteba.github.io/deploymydemoapp/",
             "outputPath": "dist/demodemo",
             "index": "src/index.html",
             "main": "src/main.ts",
